2007-09-23  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Require gupnp 0.6.

2007-09-23  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-gui.c:
	* src/gupnp-av-cp.glade:
	* src/icons.c:
	* src/icons.h:

	Icons for min and max volume around the volume vscale.

2007-09-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-renderercombo.c:

	Fix a copy&paste mistake.

2007-09-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/av-cp-gui.c:
	* src/av-cp-renderercombo.c:
	* src/av-cp-renderercombo.h:

	Display icons of renderer devices in the renderer combo as well.

2007-09-22  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-renderercombo.c:

	Implement removal of renderer from the combobox.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/icons.c:
	* src/icons.h:
	* src/universal-cp-actiondialog.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-gui.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Rename 'universal-cp-icons' module to 'icons' as other applications
	will use it too.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-av-cp.glade:

	Remove the native labels of scales and keep an initially empty label
	for displaying media position.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-renderercombo.c:

	Fix the code to set the active renderer on addition.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp.c:

	Exit the mainloop 'after' unrefing the objects.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	- Move removal of pending GET request to the GET callback.
	- Free the GET request data only at the end of the GET callback.
	- A small optimization.

2007-09-21  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Add pending GET requests to pending_gets before sending off the
	message.

2007-09-20  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp-renderercombo.c:
