@@ -67,9 +67,8 @@ gboolean
 init_ui (gint   *argc,
          gchar **argv[])
 {
-        GtkWidget *renderer_combo;
-        gint       window_width, window_height;
-        gchar     *glade_path = NULL;
+        gchar *glade_path = NULL;
+        gint   window_width, window_height;
 
         gtk_init (argc, argv);
         glade_init ();
@@ -98,8 +97,6 @@ init_ui (gint   *argc,
         g_assert (main_window != NULL);
         about_dialog = glade_xml_get_widget (glade_xml, "about-dialog");
         g_assert (about_dialog != NULL);
-        renderer_combo = glade_xml_get_widget (glade_xml, "renderer-combobox");
-        g_assert (renderer_combo != NULL);
 
         /* 40% of the screen but don't get bigger than 1000x800 */
         window_width = CLAMP ((gdk_screen_width () * 40 / 100), 10, 1000);
