@@ -7,6 +7,12 @@
 2007-09-23  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* src/av-cp-gui.c:
+
+	Remove unneeded renderer-combo code from gui module.
+
+2007-09-23  Zeeshan Ali  <zeenix@gstreamer.net>
+
+	* src/av-cp-gui.c:
 	* src/gupnp-av-cp.glade:
 	* src/icons.c:
 	* src/icons.h:
